ingress-resources.yaml
#@ load("@ytt:data", "data")

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tap-gui
  namespace: tap-gui
spec:
  virtualhost:
    fqdn: #@ "tap-gui.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: server
          port: 7000

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: app-live-view
  namespace: app-live-view
spec:
  virtualhost:
    fqdn: #@ "app-live-view.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: application-live-view-5112
          port: 80

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: api-portal-server
  namespace: api-portal
spec:
  virtualhost:
    fqdn: #@ "api-portal.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: api-portal-server
          port: 8080
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: learning-center
  namespace: learning-center-guided-ui
spec:
  virtualhost:
    fqdn: #@ "learning-center.{}".format(data.values.domain)
    tls:
      secretName: #@ "{}/{}".format(data.values.tls.namespace,data.values.tls.secretName)
  routes:
    - services:
        - name: learningcenter-portal
          port: 8080
